[package]
name = "concurrent-bloom-rs"
description = "thread-safe bloom filter"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mbver/concurrent-bloom-rs"
homepage = "https://github.com/mbver/concurrent-bloom-rs"

[lib]
name = "concurrent_bloom"

[dependencies]
fnv = "1.0.7"
rand = "0.9.0"
rayon = "1.10.0"
serde = {version ="1.0.219", features= ["derive"]}
